--- a/files_and_folders/files_and_folders.ipynb
+++ b/files_and_folders/files_and_folders.ipynb
@@ -25,7 +25,7 @@
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\marthe.veldhuis_nsp\\\\Documents\\\\cursussen\\\\python_refresh'"
+       "'C:\\\\Users\\\\marthe.veldhuis_nsp\\\\Documents\\\\cursussen\\\\python_refresh\\\\files_and_folders'"
       ]
      },
      "execution_count": 1,
@@ -67,17 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6682ac3f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'C:\\\\Users\\\\marthe.veldhuis_nsp\\\\Documents\\\\cursussen\\\\python_refresh'"
+       "'C:\\\\Users\\\\marthe.veldhuis_nsp\\\\Documents\\\\cursussen\\\\python_refresh\\\\files_and_folders'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,31 +89,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "69c77a25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['.git',\n",
-       " '.ipynb_checkpoints',\n",
-       " 'basic_types_operations.ipynb',\n",
-       " 'code_structure_errors.ipynb',\n",
-       " 'cooler_operations.ipynb',\n",
-       " 'decorators_generators.ipynb',\n",
-       " 'OO.ipynb',\n",
+       "['.ipynb_checkpoints',\n",
+       " 'example_zip.zip',\n",
+       " 'files_and_folders.ipynb',\n",
        " 'practice.txt',\n",
-       " 'random_useful_functions.ipynb',\n",
-       " 'README.md',\n",
-       " 'sum.py',\n",
-       " 'test_sum.py',\n",
-       " 'Untitled.ipynb',\n",
-       " '__init__.py',\n",
-       " '__pycache__']"
+       " 'top_level']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "0f8f7c0a",
    "metadata": {},
    "outputs": [],
@@ -134,30 +124,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "9bb5096c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['.git',\n",
-       " '.ipynb_checkpoints',\n",
-       " 'basic_types_operations.ipynb',\n",
-       " 'code_structure_errors.ipynb',\n",
-       " 'cooler_operations.ipynb',\n",
-       " 'decorators_generators.ipynb',\n",
-       " 'OO.ipynb',\n",
-       " 'random_useful_functions.ipynb',\n",
-       " 'README.md',\n",
-       " 'sum.py',\n",
-       " 'test_sum.py',\n",
-       " 'Untitled.ipynb',\n",
-       " '__init__.py',\n",
-       " '__pycache__']"
+       "['.ipynb_checkpoints',\n",
+       " 'example_zip.zip',\n",
+       " 'files_and_folders.ipynb',\n",
+       " 'top_level']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "00ba0fc6",
    "metadata": {},
    "outputs": [
@@ -250,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "0a5f08ca",
    "metadata": {},
    "outputs": [],
@@ -260,21 +240,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "5dd56fdb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\marthe.veldhuis_nsp\\\\Documents\\\\cursussen\\\\python_refresh\\\\example_zip.zip'"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dir_to_zip = \"C:\\\\Users\\\\marthe.veldhuis_nsp\\\\Documents\\\\cursussen\\\\python_refresh\"\n",
     "output_filename = 'example_zip'\n",
@@ -283,22 +252,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "9f796efd",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'dir_for_extract_result' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\MARTHE~1.VEL\\AppData\\Local\\Temp/ipykernel_11600/907744860.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mshutil\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munpack_archive\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutput_filename\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdir_for_extract_result\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'zip'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'dir_for_extract_result' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "shutil.unpack_archive(output_filename, dir_for_extract_result, 'zip')"
    ]
